--- a/101304007.github.io/app.css
+++ b/101304007.github.io/app.css
@@ -1,26 +1,14 @@
-#message{
-	font-size: 40px;
-	width: 440px;
-	text-align: right;
+.green{
+	background: green;
 }
 
 button{
+	/*width: 100px;*/
 	font-size: 24px;
 	margin: 5px;
 	width: 100px;
 	height: 100px;
-	border: solid 2px black;
 }
-
-.line1{
-	background-color: #FF3333;
-}
-.line2{
-	background-color: #FF3333;
-}
-.line3{
-	background-color: #FF3333;
-}
-.line4{
-	background-color: #FF3333;
+#message{
+	font-size: 24px;
 }
